Fix grid spacing for tech container, fix react key errors, refactor icons on tech cards

--- a/src/styles/base/grid.scss
+++ b/src/styles/base/grid.scss
@@ -9,7 +9,8 @@
 		grid-template-columns: repeat(1, 1fr);
 	} @else if $viewport==tablet {
 		grid-template-columns: repeat(2, 1fr);
+		row-gap: 10px;
 	} @else if $viewport==desktop {
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(4, 1fr);
 	}
 }
