--- a/src/styles/pages/contact.scss
+++ b/src/styles/pages/contact.scss
@@ -5,7 +5,7 @@
 
     h2 {
         font-size: 55px;
-        margin: 0rem 6rem 0rem 6rem;
+        margin: 1.5rem 6rem 0rem 6rem;
         line-height: initial;
     }
 
